# apc524-finalproject

./: .gitignore  .pre-commit-config.yaml  2022.11.0  =2022.11.0  =2022.12.0  CHANGELOG.md  LICENSE.txt  README.md  noxfile.py  perturb.py  pyproject.toml  requirements.txt
.github/workflow/: ci.yml
.github/workflows/: ci.yml
docs/: conf.py  index.rst
final_project/: __about__.py  __init__.py  app.py  app_copy.py  model.py  optimization.py  perturb.py  protocols.py
final_project/dash/: app.py  requirements.txt
final_project/data/: A_p.csv  gas_demand.csv  gas_supply.csv  generators.csv  lines.csv  load.csv  nodes_g.csv  pipelines.csv
final_project/unc/: __init__.py
notebooks/: gas_demand.csv  gas_supply.csv  generators.csv  lines.csv  load.csv  optimization formulation initial.ipynb  pipelines.csv  process_data.ipynb
notebooks/raw_data/: Fuels_data.csv  Generators_data.csv  Load_data.csv  Network.csv  regions.csv
src/unc/: __init__.py
tests/: test_model.py  test_optimization.py  test_perturbation_network.py
